ks8/Archive/deployment-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catelogservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catelogservice
  template:
    metadata:
      labels:
        app: catelogservice
    spec:
      containers:
      - image: nikkuaryan/catelogservice:latest 
        name: catelogservice
