ks8/Archive/service-catalog1.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalogservice
spec:  
  selector:
    name: catalogservice
    type: frontend-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      nodePort: 30036
      targetPort: 80
  type: NodePort
