ks8/Archive/service-ks8.yaml
apiVersion: v1
kind: Service
metadata:
  name: productservice
spec:  
  selector:
    app: productservice
  ports:
    - name: productservice
      protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
