ks8/Archive/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalogservice
spec:  
  selector:
    app: catalogservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer

---
apiVersion: v1
kind: Service
metadata:
  name: catalogservice
spec:
  selector:
    app: catalogservice
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
